[package]
name = "rust-playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
crossterm = "0.27.0"
futures-util = "0.3.30"
moka = { version = "0.12.7", features = ["future"] }
ratatui = "0.26.3"
serde = "1.0.203"
serde_json = "1.0.117"
surf = "2.3.2"
tokio = { version = "1.38.0", features = ["rt-multi-thread", "macros", "sync", "tracing", "time"] }
